# mcp-bioforensics

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/samples/: trials_sample.csv
datasets/: registry.py
index/: faiss.ids.json
src/mcp_bioforensics/: __init__.py  cli.py  config.py  server.py
src/mcp_bioforensics/db/: models.py  session.py
src/mcp_bioforensics/index/: embed.py  faiss_store.py
src/mcp_bioforensics/ingest/: loaders.py
src/mcp_bioforensics/retrieval/: hybrid.py
tests/: test_ingest.py
