[project]
name = "mcp-bioforensics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gh (>=0.0.4,<0.0.5)"
]

[tool.poetry]
packages = [{include = "mcp_bioforensics", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
